@@ -1,183 +1,199 @@
 package org.github.gabrielgodoi.gtsolarbackend.services;
 
 import lombok.RequiredArgsConstructor;
-import org.github.gabrielgodoi.gtsolarbackend.dto.budget.BudgetDto;
-import org.github.gabrielgodoi.gtsolarbackend.dto.budget.InsertBudgetDto;
-import org.github.gabrielgodoi.gtsolarbackend.dto.details.Details;
-import org.github.gabrielgodoi.gtsolarbackend.dto.project.InsertProjectDto;
-import org.github.gabrielgodoi.gtsolarbackend.dto.project.ProjectDto;
-import org.github.gabrielgodoi.gtsolarbackend.dto.project.UpdateProjectDto;
-import org.github.gabrielgodoi.gtsolarbackend.dto.step.Step;
-import org.github.gabrielgodoi.gtsolarbackend.entities.Admin;
-import org.github.gabrielgodoi.gtsolarbackend.entities.Budget;
-import org.github.gabrielgodoi.gtsolarbackend.entities.Client;
+import org.github.gabrielgodoi.gtsolarbackend.dto.equipments.EquipmentsDto;
+import org.github.gabrielgodoi.gtsolarbackend.dto.project.*;
+import org.github.gabrielgodoi.gtsolarbackend.entities.*;
 import org.github.gabrielgodoi.gtsolarbackend.entities.Project;
-import org.github.gabrielgodoi.gtsolarbackend.errors.AlreadyExistsException;
+import org.github.gabrielgodoi.gtsolarbackend.entities.Supplier.Equipment;
+import org.github.gabrielgodoi.gtsolarbackend.entities.admins.Admin;
+import org.github.gabrielgodoi.gtsolarbackend.entities.persons.Engineer;
+import org.github.gabrielgodoi.gtsolarbackend.entities.persons.Installer;
+import org.github.gabrielgodoi.gtsolarbackend.enums.StatusEnum;
 import org.github.gabrielgodoi.gtsolarbackend.errors.EntityNotFoundException;
-import org.github.gabrielgodoi.gtsolarbackend.repositories.AdminRepository;
-import org.github.gabrielgodoi.gtsolarbackend.repositories.BudgetRepository;
-import org.github.gabrielgodoi.gtsolarbackend.repositories.ClientRepository;
-import org.github.gabrielgodoi.gtsolarbackend.repositories.ProjectRepository;
-import org.github.gabrielgodoi.gtsolarbackend.services.mappers.BudgetMapper;
+import org.github.gabrielgodoi.gtsolarbackend.repositories.*;
 import org.github.gabrielgodoi.gtsolarbackend.services.mappers.ProjectMapper;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class ProjectService {
     private final ProjectRepository projectRepository;
-    private final ClientRepository clientRepository;
     private final AdminRepository adminRepository;
-    private final BudgetRepository budgetRepository;
-    private final BudgetMapper budgetMapper;
-    private final ProjectMapper projectMapper;
+    private final ClientRepository clientRepository;
+    private final PersonRepository personRepository;
+    private final ProjectMapper mapper;
 
     public List<ProjectDto> findAll() {
-        List<Project> projectList = this.projectRepository.findAll();
-        return projectList.stream().map(this.projectMapper::entityToDto).collect(Collectors.toList());
+        return projectRepository.findAll()
+                .stream()
+                .map(mapper::toDto)
+                .toList();
     }
 
     public ProjectDto findOne(String id) {
-        Project project = this.projectRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Project: " + id + " not found")
-        );
-        return this.projectMapper.entityToDto(project);
+        Project project = projectRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Project with id: " + id + " not found"));
+
+        return mapper.toDto(project);
     }
 
     public List<ProjectDto> findFromClient(String clientId) {
-        this.clientRepository.findById(clientId).orElseThrow(
-                () -> new EntityNotFoundException("User: " + clientId + " doesn't exists in our database")
+        List<Project> projects = projectRepository.findAllByClientId(clientId).orElseThrow(
+                () -> new EntityNotFoundException("No projects found for client with ID: " + clientId)
         );
-        List<Project> projectList = this.projectRepository.findAllByClientId(clientId).orElseThrow(
-                () -> new EntityNotFoundException("User: " + clientId + " still don't have any project related to him!")
-        );
-        return projectList.stream().map(this.projectMapper::entityToDto).collect(Collectors.toList());
+        return projects.stream()
+                .map(mapper::toDto)
+                .toList();
     }
 
-    public ProjectDto create(String adminId, InsertProjectDto projectDto) {
-        Admin admin = this.adminRepository.findById(adminId).orElseThrow(
-                () -> new EntityNotFoundException("Admin: " + adminId + " not found")
+
+    // precisamos do id de um cliente,
+    // precisamos do id do fornecedor de equipamentos -> ele estará na lista de equipamentos
+    // consumo de energia da residência em que o projeto se iniciará
+    // precisamos de um engenheiro -> vamos buscar do repo de persons(buscando um engenheiro por id)
+    // precisamos de um instalador -> vamos buscar do repositório de person(buscando um instalador por id)
+    // lista de equipamentos que irão ser usados no projeto -> vamos buscar do repositório de equipamentos
+    public ProjectDto create(String adminEmail, InsertProjectDto projectDto) {
+        // verificar se cada documento que precisamos existe
+        Admin admin = this.adminRepository.findUserByEmail(adminEmail).orElseThrow(
+                () -> new EntityNotFoundException("Admin com email '" + adminEmail + "' não foi encontrado")
         );
-        Client client =this.clientRepository.findById(projectDto.getClientId()).orElseThrow(
-                () -> new EntityNotFoundException("client: " + projectDto.getClientId() + " not found")
+
+        Client client = this.clientRepository.findById(projectDto.clientId()).orElseThrow(
+                () -> new EntityNotFoundException("Cliente com ID '" + projectDto.clientId() + "' não foi encontrado")
         );
 
-        Project retrivied = this.projectRepository.findByName(projectDto.getName());
+        Engineer engineer = this.personRepository.findEngineerById(projectDto.engineerId()).orElseThrow(
+                () -> new EntityNotFoundException("Engenheiro com ID '" + projectDto.engineerId() + "' não foi encontrado")
+        );
 
-        if (retrivied != null) {
-            throw new AlreadyExistsException("Projeto Já existe");
-        }
-
-        Project project = this.projectMapper.dtoToEntity(projectDto);
+        Installer installer = this.personRepository.findInstallerById(projectDto.installerId()).orElseThrow(
+                () -> new EntityNotFoundException("Instalador com ID '" + projectDto.installerId() + "' não foi encontrado")
+        );
+        Double totalCost = this.employeesCost(projectDto.energyConsumption(), engineer.getValuePerKwh(), installer.getPricePerKwp()) + this.equipmentsCoast(projectDto.equipments());
+        Project project = this.mapper.InsertToEntity(projectDto);
+        project.setApprovedValue(totalCost);
+        project.setEngineer(engineer);
+        project.setInstaller(installer);
         project.setCreatedBy(admin);
         project.setClient(client);
-        project.setBudgetList(new ArrayList<>());
-        Project entity = this.projectRepository.save(project);
-
-        projectDto.getBudgetList().forEach(budgetDto -> {
-            double totalApproved = budgetDto.getDetails().stream()
-                    .mapToDouble(Details::getPrice)
-                    .sum();
-            budgetDto.setApprovedValue(totalApproved);
-            Budget budget = this.budgetMapper.dtoToEntity(budgetDto);
-            budget.setProject(entity);
-            this.budgetRepository.save(budget);
-        });
-        return this.projectMapper.entityToDto(entity);
+        project.setStatus(StatusEnum.PLANNING);
+        return this.mapper.toDto(this.projectRepository.save(project));
     }
 
-    public ProjectDto update(String projectId, UpdateProjectDto updateDto) {
+    // método para aprovar um projeto(atualizando o campo aprrovedByClient)
+    // devemos ter um método para o cliente, o engenheiro aprovarem o projeto
+    // precisamos de uma ideia para que o instalador aceite(ou não) um projeto
+    public void clientApproveProject(String projectId, String engineerId) {
         Project project = this.projectRepository.findById(projectId).orElseThrow(
-                () -> new EntityNotFoundException("Project: " + projectId + " not found")
+                () -> new EntityNotFoundException("projeto com ID '" + projectId + "' não foi encontrado")
         );
-        if (updateDto.getName() != null && !updateDto.getName().isBlank()) {
-            project.setName(updateDto.getName());
-        }
-        if (updateDto.getStatus() != null) {
-            project.setStatus(updateDto.getStatus());
-        }
-        if (updateDto.getObservations() != null && !updateDto.getObservations().isEmpty()) {
-            project.getObservations().addAll(updateDto.getObservations());
-        }
-        project.setUpdated_at(LocalDateTime.now());
-
-        Project updatedProject = this.projectRepository.save(project);
-        return this.projectMapper.entityToDto(updatedProject);
-    }
-
-
-    public String addDocument(String projectId, List<MultipartFile> files) {
-        // chamar o serviço de upload de arquivos
-        // fazer upload dos arquivos adicionados ao projeto em questão
-        // enviar para o banco de dados atualizando aquele determinado projeto
-        // enviar uma mensagem de retorno sobre os documentos adicionados
-        return "Adicionado com sucesso";
-    }
-
-    public ProjectDto addStep(String projectId, Step step) {
-        Project project = this.projectRepository.findById(projectId).orElseThrow(
-                () -> new EntityNotFoundException("User: " + projectId + " doesn't exists in our database")
-        );
-        project.getSteps().add(step);
-        Project savedProject = this.projectRepository.save(project);
-        return this.projectMapper.entityToDto(savedProject);
-    }
-
-    public BudgetDto addBudget(String projectId, InsertBudgetDto budgetDto) {
-        Budget entity = new Budget();
-        Project project = this.projectRepository.findById(projectId).orElseThrow(
-                () -> new EntityNotFoundException("Project: " + projectId + " not found")
+        this.personRepository.findEngineerById(engineerId).orElseThrow(
+                () -> new EntityNotFoundException("engineer com ID '" + projectId + "' não foi encontrado")
         );
 
-        AtomicReference<Double> finalPrice = new AtomicReference<>(0.00);
-        budgetDto.getDetails().forEach((d) -> {
-            finalPrice.updateAndGet(v -> v + d.getPrice());
-            entity.getDetails().add(d);
-            d.setCreated_at(LocalDateTime.now());
-            d.setUpdated_at(LocalDateTime.now());
-        });
-        entity.setDate(LocalDateTime.now());
-        entity.setProject(project);
-        entity.setApprovedValue(finalPrice.get());
-        project.setApprovedValue(finalPrice.get());
-        // devemos transformar esses orçamentos desse projeto em um pdf
-        // devemos enviar esse pdf para o cliente
-        // o projeto pode iniciar ?
-        // o budget foi aprovado ??
-        this.budgetRepository.save(entity);
+        project.setApprovedByEngineer(true);
+
         this.projectRepository.save(project);
-        return new BudgetDto(entity);
     }
+
+    public void engineerApproveProject(String projectId, String clientId) {
+        Project project = this.projectRepository.findById(projectId).orElseThrow(
+                () -> new EntityNotFoundException("projeto com ID '" + projectId + "' não foi encontrado")
+        );
+        this.clientRepository.findById(clientId).orElseThrow(
+                () -> new EntityNotFoundException("client com ID '" + projectId + "' não foi encontrado")
+        );
+
+        project.setApprovedByClient(true);
+        this.projectRepository.save(project);
+    }
+
+    public void installerAcceptProject(String projectId, String installerId) {
+        Project project = this.projectRepository.findById(projectId).orElseThrow(
+                () -> new EntityNotFoundException("projeto com ID '" + projectId + "' não foi encontrado")
+        );
+        this.personRepository.findInstallerById(installerId).orElseThrow(
+                () -> new EntityNotFoundException("installer com ID '" + projectId + "' não foi encontrado")
+        );
+
+        this.projectRepository.save(project);
+    }
+
+    public ProjectDto update(String projectId, InsertProjectDto projectDto) {
+        Project retriviedData = this.projectRepository.findById(projectId)
+                .orElseThrow(() -> new EntityNotFoundException("Project with id: " + projectId + " not found"));
+
+        retriviedData.setEngineer(projectDto.engineerId() != null
+                ? this.personRepository.findEngineerById(projectDto.engineerId())
+                .orElseThrow(() -> new EntityNotFoundException("Engineer com ID '" + projectDto.engineerId() + "' não foi encontrado"))
+                : retriviedData.getEngineer()
+        );
+        retriviedData.setInstaller(projectDto.installerId() != null
+                ? this.personRepository.findInstallerById(projectDto.installerId())
+                .orElseThrow(() -> new EntityNotFoundException("Installer com ID '" + projectDto.installerId() + "' não foi encontrado"))
+                : retriviedData.getInstaller()
+        );
+        retriviedData.setName(projectDto.name() != null ? projectDto.name() : retriviedData.getName());
+        retriviedData.setEnergyConsumption(projectDto.energyConsumption() != null ? projectDto.energyConsumption() : retriviedData.getEnergyConsumption());
+        if (projectDto.energyConsumption() != null) {
+            Double costEmployees = this.employeesCost(
+                    projectDto.energyConsumption(),
+                    retriviedData.getEngineer().getValuePerKwh(),
+                    retriviedData.getInstaller().getPricePerKwp()
+            );
+            Double costEquipments = this.equipmentsCoastUpdate(retriviedData.getEquipments());
+            retriviedData.setApprovedValue(costEmployees + costEquipments);
+        }
+        Project updatedProject = this.projectRepository.save(retriviedData);
+        return this.mapper.toDto(updatedProject); // Assumindo que você tem um mapper para converter Project -> ProjectDto
+    }
+
+
+    // após o projeto ser aprovado vamos adicionar passos a esse projeto
+    // para que ele inicialize e dê continuidade
+    // podemos adicionar passos para manutenção
+    //public ProjectDto addStep(String projectId, Step step) {
+
+    //}
 
     public void deleteOne(String projectId) {
-        this.projectRepository.findById(projectId).orElseThrow(
-                () -> new EntityNotFoundException("Project: " + projectId + " not found")
-        );
-        this.projectRepository.deleteById(projectId);
+        projectRepository.findById(projectId)
+                .orElseThrow(() -> new EntityNotFoundException("Project with ID: " + projectId + " not found"));
+
+        projectRepository.deleteById(projectId);
     }
 
     public void deleteMany(List<String> projectIds) {
-        projectIds.forEach(id -> this.projectRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Project: " + id + " not found")
-        ));
+        projectIds.forEach(id -> {
+            projectRepository.findById(id)
+                    .orElseThrow(() -> new EntityNotFoundException("Project with ID: " + id + " not found"));
+        });
 
-        this.projectRepository.deleteAllById(projectIds);
+        projectRepository.deleteAllById(projectIds);
     }
 
-
-    public void dtoToEntity(InsertProjectDto dto, Project entity) {
-        entity.setName(dto.getName());
-        entity.setStatus(dto.getStatus());
-        dto.getSteps().forEach(s -> entity.getSteps().add(s));
-        entity.setCreated_at(LocalDateTime.now());
-        entity.setUpdated_at(LocalDateTime.now());
+    // método para calcular a margem de lucro com base no custo total, um método separado vai desacoplar lógiva
+    public Double employeesCost(Double kwp, Double engineerPerKwp, Double installerPerKwp) {
+        return (kwp * engineerPerKwp) + (kwp * installerPerKwp);
     }
 
+    public Double equipmentsCoast(List<EquipmentsDto> equipments) {
+        Double value = 0.0;
+        for (EquipmentsDto equipment : equipments) {
+            value += equipment.price();
+        }
+        return value;
+    }
+
+    public Double equipmentsCoastUpdate(List<Equipment> equipments) {
+        Double value = 0.0;
+        for (Equipment equipment : equipments) {
+            value += equipment.getPrice();
+        }
+        return value;
+    }
 }
